--- a/css/shared.css
+++ b/css/shared.css
@@ -351,3 +351,72 @@ a:active {
   outline: 2px dashed var(--accent-color);
   outline-offset: 4px;
 }
+
+/* Modal window */
+
+.modal-window {
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-open {
+  display: flex;
+}
+
+.modal-dialog {
+  min-width: 855px;
+  min-height: 251px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.modal-content {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  position: relative;
+  border-radius: 20px;
+}
+
+.modal-text {
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 34px;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 25px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: transparent;
+  display: flex;
+}
+
+.modal-close-icon {
+  width: 13px;
+  height: 13px;
+}
+
+.notif-btn-big {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  border: none;
+  background-color: #f78b3b;
+  border-radius: 10px;
+  padding: 15px 40px;
+}
