--- a/css/shared.css
+++ b/css/shared.css
@@ -420,3 +420,33 @@ a:active {
   border-radius: 10px;
   padding: 15px 40px;
 }
+
+/* Contact us */
+
+.contact-fixed-link {
+  position: fixed;
+  z-index: 100;
+  width: 80px;
+  height: 80px;
+  bottom: 30px;
+  right: 30px;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+  background-color: #555555;
+  overflow: hidden;
+}
+
+.contact-fixed-link:active {
+  opacity: 1;
+}
+
+.contact-fixed-link:hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+
+.contact-fixed-icon {
+  display: block;
+  width: 80px;
+  height: 80px;
+}
